# ChromSAT

./: Dockerfile  Makefile  README.md  meson.build  vertices.hpp  vertices_vec.cpp
bnp/: build.ninja  color6  compile_commands.json  dsatur  minicolor  minicolor-converter  segundo
bnp/meson-logs/: meson-log.txt
bnp/meson-private/: coredata.dat.prev
sota/: cplex.cpp
sota/MiniMerge/core/: Main.C  Main.cpp  Solver.cpp  depend.mk
sota/React-Partialcol/: Graph.C  Graph.h  initializeColoring.C  inputGraph.C  main.C  manipulateArrays.C  reactcol.C  termcolors.h  verifyColoring.C
sota/Segundo/DSATUR/: dsatur_algo.cpp  dsatur_algo.h  graphe.cpp  main.cpp
sota/color6/: color6.c
sota/dOmega/LS/src/: Clique.cpp  Clique.h  VertexCover.cpp  VertexCover.h
sota/trick/: dsatur.c
src/: algorithm.hpp  basic_graph.cpp  basic_graph.hpp  bi_graph.cpp  bi_graph.hpp  bitset.hpp  brancher.hpp  ca_graph.cpp  ca_graph.hpp  cd.cpp  clique_algo.cpp  clique_algo.hpp  cliquer.hpp  cliquesampler.cpp  cliquesampler.hpp  coloring_heuristic.cpp  coloring_heuristic.hpp  constants.hpp  cplex.cpp  dimacs.hpp  dsatur.hpp  fillin.hpp  gc.cpp  graph.cpp  graph.hpp  heap.hpp  interval_list.cpp  interval_list.hpp  intstack.cpp  intstack.hpp  lex_BFS.hpp  mycielski.cpp  mycielski.hpp  node.cpp  node.hpp  options.cpp  options.hpp  partition.cpp  partition.hpp  preprocessing.cpp  (+24 more)
src/stage/: BnP.cpp  BnP.hpp  Graph.cpp  algo.hpp  main_bnp.cpp  ms_graph.cpp  ms_graph.hpp  readme.txt
src/stage/archive/: bp_graph.cpp  bp_graph.hpp  bp_node.cpp  bp_node.hpp  generic.hpp  solution.cpp  solution.hpp  transform.cpp  transform.hpp
src/stage/archive2/: BNP.cpp  Generique.hpp  Graph.cpp  Graph.hpp  Node.cpp  Node.hpp
tgf/: map_100_106060ppm.tgf  map_100_62020ppm.tgf  map_10_66666ppm.tgf  map_150_108814ppm.tgf  map_150_65324ppm.tgf  map_15_104761ppm.tgf  map_50_164897ppm.tgf  map_50_53877ppm.tgf  map_75_100900ppm.tgf
